--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "gheco",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "apikeygen": "^0.2.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.15.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-session": "^1.15.1",
+    "jsesc": "^2.4.0",
+    "mongoose": "^4.9.1",
+    "mongoose-simpledb": "^5.1.0",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "~2.0.0-beta6",
     "serve-favicon": "~2.3.0"
   }
