--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "main": "bin/www",
     "scripts": {
-        "start": "nodemon bin/www"
+        "start": "node bin/www"
     },
     "dependencies": {
         "apikeygen": "^0.2.0",
