--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "main": "bin/www",
   "scripts": {
-    "start": "node bin/www",
-    "test": "nodemon bin/www"
+    "start": "node bin/www"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
